--- a/PC CAFFE/Caffe/frmCaffe.resx
+++ b/PC CAFFE/Caffe/frmCaffe.resx
@@ -315,6 +315,9 @@
   <data name="vpc.HeaderText" xml:space="preserve">
     <value>vpc</value>
   </data>
+  <data name="vpc.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <metadata name="porez_potrosnja.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
